# smoother

./: CMakeLists.txt  cpp14.h  main.cc  pngimage.cc  pngimage.h  smoother.cpp
benchmark/omp/: omp.hdf5  omp_original.hdf5  run.py
doc/: numeca.ipynb  numeca.slides.html
